--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Document</title>
 </head>
 
-<body style="background-color:rgb(172, 168, 168);">
+<body style="background-color:rgb(208, 206, 206);">
   <nav class="navbar navbar-expand-lg fixed-top" style="background-color: white;">
     <div class="container">
       <a class="navbar-brand" href="#">
@@ -459,7 +459,7 @@
 
   <div class="row" style="padding-top: 100px; text-align: center;margin-left: 170px;">
     <div class="col-2">
-      <div class="card" style="border-style: none;background-color: rgb(172, 168, 168);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
         <img src="assets/imgs/hand-a.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">Soap on hand</h6>
@@ -468,7 +468,7 @@
     </div>
 
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(172, 168, 168);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
         <img src="assets/imgs/hand-b.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">plam on plam</h6>
@@ -476,7 +476,7 @@
       </div>
     </div>
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(172, 168, 168);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
         <img src="assets/imgs/hand-c.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">between fingers</h6>
@@ -484,7 +484,7 @@
       </div>
     </div>
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(172, 168, 168);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
         <img src="assets/imgs/hand-d.png" class="card-img-top" style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">Back to hands</h6>
@@ -492,7 +492,7 @@
       </div>
     </div>
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(172, 168, 168);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
         <img src="assets/imgs/hand-e.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">Clean with water</h6>
@@ -500,7 +500,7 @@
       </div>
     </div>
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(172, 168, 168);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
         <img src="assets/imgs/hand-f.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">Focus on wrist</h6>
@@ -699,8 +699,8 @@
                 <p>On February 11, 2020 the World Health Organization announced an official name for the disease that is
                   causing the 2019 novel coronavirus outbreak, first identified in Wuhan China. The new name of this
                   disease
-                  is coronavirus disease 2019, abbreviated as COVID-19. In COVID-19, ‘CO’ stands for ‘corona,’ ‘VI’ for
-                  ‘virus,’ and ‘D’ for disease. Formerly, this disease was referred to as “2019 novel coronavirus”
+                  is coronavirus disease 2019, abbreviated as COVID-19. In COVID-19, CO stands for corona, VI for
+                  virus, and D for disease. Formerly, this disease was referred to as “2019 novel coronavirus”
                   or “2019-nCoV”.</p>
                 <p>A novel coronavirus is a new coronavirus that has not been previously identified. The virus causing
                   coronavirus disease 2019 (COVID-19), is not the same as the <a href="#" target="_blank">coronaviruses
@@ -720,8 +720,8 @@
                 <p>On February 11, 2020 the World Health Organization announced an official name for the disease that is
                   causing the 2019 novel coronavirus outbreak, first identified in Wuhan China. The new name of this
                   disease
-                  is coronavirus disease 2019, abbreviated as COVID-19. In COVID-19, ‘CO’ stands for ‘corona,’ ‘VI’ for
-                  ‘virus,’ and ‘D’ for disease. Formerly, this disease was referred to as “2019 novel coronavirus”
+                  is coronavirus disease 2019, abbreviated as COVID-19. In COVID-19, CO stands for corona, VI for
+                  virus, and D for disease. Formerly, this disease was referred to as “2019 novel coronavirus”
                   or “2019-nCoV”.</p>
                 <p>There are <a href="#" target="_blank">many types</a> of human coronaviruses including some that
                   commonly cause mild upper-respiratory tract illnesses. COVID-19 is a new disease, caused be a novel
