--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Document</title>
 </head>
 
-<body style="background-color:rgb(208, 206, 206);">
+<body style="background-color:rgb(234, 228, 228);">
   <nav class="navbar navbar-expand-lg fixed-top" style="background-color: white;">
     <div class="container">
       <a class="navbar-brand" href="#">
@@ -299,7 +299,7 @@
   <div class="row">
     <div class="col-2"></div>
     <div class="col-2">
-      <div class="card" style="border-style: none;background-color: rgb(172, 168, 168);">
+      <div class="card" style="border-style: none;background-color: rgb(234, 228, 228);">
         <img src="assets/imgs/advice-a.png" class="card-img-top rounded-circle"
           style="width:150px;height: 150px; padding-left: 0px;">
         <div class="card-body">
@@ -310,7 +310,7 @@
       </div>
     </div>
     <div class="col-2">
-      <div class="card" style="border-style: none;background-color: rgb(172, 168, 168);">
+      <div class="card" style="border-style: none;background-color: rgb(234, 228, 228);">
         <img src="assets/imgs/advice-b.png" class="card-img-top rounded-circle"
           style="width:150px;height: 150px; padding-left: 0px;">
         <div class="card-body">
@@ -321,7 +321,7 @@
       </div>
     </div>
     <div class="col-2">
-      <div class="card" style="border-style: none;background-color:rgb(172, 168, 168);">
+      <div class="card" style="border-style: none;background-color:rgb(234, 228, 228);">
         <img src="assets/imgs/advice-c.png" class="card-img-top rounded-circle"
           style="width:150px;height: 150px; padding-left: 0px;">
         <div class="card-body">
@@ -332,7 +332,7 @@
       </div>
     </div>
     <div class="col-2">
-      <div class="card" style="border-style: none;background-color: rgb(172, 168, 168);">
+      <div class="card" style="border-style: none;background-color: rgb(234, 228, 228);">
         <img src="assets/imgs/advice-d.png" class="card-img-top rounded-circle"
           style="width:150px;height: 150px; padding-left: 0px;">
         <div class="card-body">
@@ -459,7 +459,7 @@
 
   <div class="row" style="padding-top: 100px; text-align: center;margin-left: 170px;">
     <div class="col-2">
-      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(234, 228, 228);padding-left:77px">
         <img src="assets/imgs/hand-a.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">Soap on hand</h6>
@@ -468,7 +468,7 @@
     </div>
 
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(234, 228, 228);padding-left:77px">
         <img src="assets/imgs/hand-b.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">plam on plam</h6>
@@ -476,7 +476,7 @@
       </div>
     </div>
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(234, 228, 228);padding-left:77px">
         <img src="assets/imgs/hand-c.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">between fingers</h6>
@@ -484,7 +484,7 @@
       </div>
     </div>
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(234, 228, 228);padding-left:77px">
         <img src="assets/imgs/hand-d.png" class="card-img-top" style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">Back to hands</h6>
@@ -492,7 +492,7 @@
       </div>
     </div>
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(234, 228, 228);padding-left:77px">
         <img src="assets/imgs/hand-e.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">Clean with water</h6>
@@ -500,7 +500,7 @@
       </div>
     </div>
     <div class="col-2" style="margin-left: -40px;">
-      <div class="card" style="border-style: none;background-color: rgb(208, 206, 206);padding-left:77px">
+      <div class="card" style="border-style: none;background-color: rgb(234, 228, 228);padding-left:77px">
         <img src="assets/imgs/hand-f.png" class="card-img-top " style="width:110px; height: 110px; border-radius: 50%;">
         <div class="card-body">
           <h6 class="card-title">Focus on wrist</h6>
@@ -510,18 +510,18 @@
   </div>
 
 
-  <div id="Treatment" class="bg-light"
-    style="padding-top: 50px;background-image: url(assets/imgs/shape-a.png);background-color: rgb(85, 99, 255); ">
-    <div class="container py-5">
+  <div id="Treatment" 
+    style="padding-top: 50px;background-image: url(assets/imgs/shape-a.png);background-color:rgb(55, 55, 213);color: white; ">
+    <div class="container py-5" >
       <div class="row">
         <div class="col-1"></div>
         <div class="col-9">
-          <h3 style="color: blue;">BE CAREFUL & STAY SAFE</h3>
+          <h3 style="color: rgb(167, 167, 242);">BE CAREFUL & STAY SAFE</h3>
         </div>
         <div class="row">
           <div class="col-1"></div>
           <div class="col-6">
-            <h2 style="font-family:Impact;font-size: 38px;color:rgb(20, 20, 121);">TREATMENT FOR CORONAVIRUS</h2>
+            <h2 style="font-family:Impact;font-size: 38px;color:rgb(255, 255, 255);">TREATMENT FOR CORONAVIRUS</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste obcaecati placeat quisquam
               voluptatem? Amet aliquid consectetur exercitationem deserunt cupiditate facere dolorum eaque sed provident
@@ -536,7 +536,7 @@
             </p>
           </div>
           <div class="col-3" style="padding-left:80px;">
-            <div class="card" style="width: 22rem;">
+            <div class="card" style="width: 22rem; background-color:rgb(35, 35, 108);color: white;">
               <div class="card-body">
                 <h5 class="card-title">Self care</h5>
                 <p class="card-text">if you have mild symptoms , stay at home until you've recovered. you can relieve
@@ -554,7 +554,7 @@
             </div>
           </div>
         </div>
-
+      </div>
       </div>
     </div>
     <div class="row" style="padding-top:155px" id="Symptoms">
@@ -630,7 +630,7 @@
         </div>
       </div>
     </div>
-  </div>
+  
   <div class="row" style="padding-top:140px" id="FAQ">
     <div class="col-2"></div>
     <div class="col-9 " style="text-align: center; margin-top: 20px;margin-left: -50PX;">
@@ -704,7 +704,7 @@
                   or “2019-nCoV”.</p>
                 <p>A novel coronavirus is a new coronavirus that has not been previously identified. The virus causing
                   coronavirus disease 2019 (COVID-19), is not the same as the <a href="#" target="_blank">coronaviruses
-                    that commonly circulate among humans</a> and cause mild illness, like the common cold.</p>
+                    that commonly </a></p>
               </div>
             </div>
           </div>
@@ -1553,13 +1553,13 @@
     </div>
     </div>
 
-    <div id="News">
+    <div id="News" style="background-image: url(assets/imgs/shape-a.png); background-color:rgb(25, 25, 68);color: white;">
       <div class="row" style="padding-top: 100px;">
         <div class="col-2"></div>
         <div class="col-7">
           <a class="navbar-brand" href="#">
             <span class="fs-1">C</span>
-            <img src="assets/imgs/TitleIcon.png" alt="Logo" width="35px" class="mb-3">
+            <img src="assets/imgs/TitleIcon.png" alt="Logo" width="35px" class="mb-3" >
             <span class="fs-1">VID19</span>
           </a> 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque eligendi assumenda earum doloremque. Dolores, distinctio! Nisi, explicabo saepe blanditiis aut tempore cum magni mollitia, fuga natus consequatur aliquid, id ipsa.
